--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 .title {
   padding: 10px;
   border: 25px solid #000000;
-  background-color: white;
+  background-color: #FFFFFF;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
